templates/fabric-node-template.yaml
Description:                                      >
  This template creates the EC2 Instance and VPC Resources for Alvin
Parameters:
  KeyName:
    Type:                                         AWS::EC2::KeyPair::KeyName
    Description:                                  Name of an existing EC2 key pair to enable SSH access to the EC2 instance
  
Resources:

  AlvinServerVPC:
    Type:                                         AWS::EC2::VPC
    Properties:
      CidrBlock:                                  10.1.0.0/16
      EnableDnsSupport:                           True
      EnableDnsHostnames:                         True
      InstanceTenancy:                            default
      Tags:
        - Key:                                    Name
          Value:                                  Alvin-Dev-VPC
 
  AlvinServerPublicSubnet:
    Type:                                         AWS::EC2::Subnet
    Properties:
        VpcId:                                    !Ref AlvinServerVPC
        MapPublicIpOnLaunch:                      false
        CidrBlock:                                10.1.0.0/24
        Tags:
        - Key:                                    Name
          Value:                                  Alvin-Dev-Public
 
  AlvinServerSecurityGroupBase:
        Type:                                     AWS::EC2::SecurityGroup
        Properties:
          GroupDescription:                       Base Security Group
          VpcId:                                  !Ref AlvinServerVPC
          SecurityGroupIngress:
          - IpProtocol:                           tcp
            CidrIp:                               0.0.0.0/0
            FromPort:                             22
            ToPort:                               22
          - IpProtocol:                           tcp
            CidrIp:                               0.0.0.0/0
            FromPort:                             0
            ToPort:                               65535
          Tags:
           - Key:                                    Name
             Value:                                  Alvin-Dev-SG
 
  AlvinServerSecurityGroupBaseIngress:
    Type:                                         AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol:                                 -1
      FromPort:                                   -1
      GroupId:                                    !GetAtt AlvinServerSecurityGroupBase.GroupId
      ToPort:                                     -1
      SourceSecurityGroupId:                      !GetAtt AlvinServerSecurityGroupBase.GroupId
      Tags:
      - Key:                                    Name
        Value:                                  Alvin-Dev-SG-Ingress
 
  AlvinServerInternetGateway:
    Type:                                         "AWS::EC2::InternetGateway"
    Properties:
      Tags:
      - Key:                                      Name
        Value:                                    Alvin-Dev-InternetGateway
 
  AlvinServerAttachGateway:
    Type:                                         AWS::EC2::VPCGatewayAttachment
    Properties:
       VpcId:                                     !Ref AlvinServerVPC
       InternetGatewayId:                         !Ref AlvinServerInternetGateway
 
  AlvinServerRouteTable:
    Type:                                         AWS::EC2::RouteTable
    Properties:
        VpcId:                                    !Ref AlvinServerVPC
        Tags:
          - Key:                                  Name
            Value:                                Alvin-Dev-Routetable
 
  AlvinServerRoute:
    Type:                                         AWS::EC2::Route
    Properties:
        RouteTableId:                             !Ref AlvinServerRouteTable
        DestinationCidrBlock:                     0.0.0.0/0
        GatewayId:                                !Ref AlvinServerInternetGateway
 
  AlvinServerSubnetRouteTableAssociation:
    Type:                                         AWS::EC2::SubnetRouteTableAssociation
    Properties:
        SubnetId:                                 !Ref AlvinServerPublicSubnet
        RouteTableId:                             !Ref AlvinServerRouteTable
 
  AlvinServerEC2:
    Type:                                         AWS::EC2::Instance
    Properties:
        KeyName:                                  !Ref KeyName
        ImageId:                                  'ami-011c2728b3d182eba'
        InstanceType:                             't2.small'
        UserData:
         Fn::Base64:                                # YAML makes userdata much cleaner
          !Sub |
              #!/bin/bash -ex
              yum update -y
        NetworkInterfaces:
        - AssociatePublicIpAddress:               true
          DeviceIndex:                            0
          GroupSet:                               [!Ref AlvinServerSecurityGroupBase]
          SubnetId:                               !Ref AlvinServerPublicSubnet
        Tags:
          - Key:                                  Name
            Value:                                Alvin-Dev-Instance

 
Outputs:
  VPCID:
    Description:                                  VPC ID
    Value:
      !Ref                                        AlvinServerVPC
  PublicSubnetID:
    Description:                                  Public Subnet ID
    Value:
      !Ref                                        AlvinServerPublicSubnet
  SecurityGroupID:
    Description:                                  Security Group ID
    Value:
      !GetAtt                                     AlvinServerSecurityGroupBase.GroupId
  EC2URL:
    Description:                                  Public DNS of the EC2 instance
    Value:
      !GetAtt                                     AlvinServerEC2.PublicDnsName
